--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,6 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'androidx.navigation.safeargs'
-    id 'kotlin-kapt'
 }
 
 android {
@@ -34,9 +32,6 @@ android {
     buildFeatures {
         viewBinding true
     }
-    dataBinding {
-        enabled true
-    }
 }
 
 dependencies {
@@ -46,6 +41,7 @@ dependencies {
 
     def lifecycle_version = "2.4.0"
 
+    implementation("com.squareup.okhttp3:logging-interceptor:4.9.3")
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     // ViewModel utilities for Compose
@@ -59,9 +55,8 @@ dependencies {
     implementation("io.coil-kt:coil-compose:1.4.0")
 
     //Retrofit
-    implementation 'com.squareup.moshi:moshi-kotlin:1.9.3'
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
